--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.10.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
